# mcp-brain-router

./: .gitignore  COMPLIANCE.md  LICENSE  README.md  STATUS.md  config.example.toml  pyproject.toml
.stress-test-temp/20260711-role-routing/: final.md  iteration-1.md  iteration-2.md
specs/001-role-based-routing/: plan.md  spec.md  tasks.md
specs/002-agentic-worker-mode/: spec.md
src/mcp_brain_router/: backends.py  config.py  install.py  router.py  server.py
tests/: conftest.py  test_agentic.py  test_roles.py  test_smoke.py
