[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-brain-router"
version = "0.1.1"
description = "MCP connector for multi-backend LLM routing (DeepSeek, GLM, Codex) with native Claude Code orchestration"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Mohan", email = "mail.n.mohan@gmail.com"}
]
keywords = ["mcp", "llm", "routing", "deepseek", "glm", "codex", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "mcp>=0.1.0",
    "httpx>=0.24.0",
    "tomli>=2.0.0; python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.scripts]
mcp-brain-router = "mcp_brain_router.server:main"
mcp-brain-router-install = "mcp_brain_router.install:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_brain_router"]

[tool.hatch.build.targets.sdist]
# Explicit allowlist — keep local tooling/scratch (.serena, .wrap-up-temp,
# STATUS.md, specs) OUT of the published sdist.
include = [
    "src/mcp_brain_router",
    "tests",
    "README.md",
    "LICENSE",
    "COMPLIANCE.md",
    "config.example.toml",
    "pyproject.toml",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
